# neural

./: Cargo.toml  README.md  canister_ids.json  dfx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: build_canisters.sh  deploy_hub.sh
src/common/: Cargo.toml
src/common/candid/: icp.did
src/common/src/: acl.rs  lib.rs
src/common/src/bindings/: dao_canister.rs  hub_canister.rs  icp.rs  identity_canister.rs  mod.rs  siwe.rs  token_index_canister.rs  vote_canister.rs
src/dao_canister/: Cargo.toml  canister.did
src/dao_canister/src/: lib.rs  memory.rs
src/dao_canister/src/execution/: mod.rs  types.rs
src/dao_canister/src/metadata/: mod.rs  types.rs
src/dao_canister/src/proposals/: deploy.rs  mod.rs  types.rs
src/demo/contracts/: hardhat.config.ts  package.json
src/demo/contracts/contracts/: Token.sol
src/demo/contracts/ignition/modules/: Token.ts
src/frontend/: package.json
src/frontend/src/app/: globals.css  layout.tsx  page.tsx
src/frontend/src/app/create-dao/: page.tsx
src/frontend/src/app/dao/[id]/: not-found.tsx  page.tsx
src/frontend/src/app/proposal/[id]/: page.tsx  (+1 more)
src/frontend/src/components/: dao-card.tsx  header.tsx  identity-provider.tsx  siwe-provider.tsx
src/frontend/src/lib/: utils.ts
src/hub_canister/: Cargo.toml  canister.did
src/hub_canister/src/: guards.rs  lib.rs  memory.rs
src/hub_canister/src/dao/: deploy.rs  mod.rs  types.rs
src/hub_canister/src/stake/: mod.rs  subaccount.rs
src/hub_canister/src/wasm/: mod.rs
src/identity_canister/: Cargo.toml  canister.did
src/identity_canister/src/: identity.rs  lib.rs  memory.rs
src/identity_canister/src/login/: mod.rs  nonce.rs
src/neural_backend/: Cargo.toml
src/oc_agent/: package.json  tsconfig.json
src/oc_agent/src/: airdrop.ts  index.ts  routes.ts
src/oc_agent/src/token_index/: index.ts  routes.ts
src/oc_agent/src/utils/: index.ts
src/registry_canister/: Cargo.toml  canister.did
src/registry_canister/src/: access.rs  encrypted.rs  guard.rs  lib.rs  memory.rs  plaintext.rs
src/token_index_canister/: Cargo.toml  canister.did
src/token_index_canister/src/: access.rs  guard.rs  lib.rs  memory.rs
src/token_index_canister/src/index/: mod.rs  snapshot.rs  types.rs
src/utils/: package.json
src/utils/src/: setup_hub.ts
src/vote_canister/: Cargo.toml  canister.did
src/vote_canister/src/: lib.rs  memory.rs
src/vote_canister/src/strategy/: mod.rs
src/vote_canister/src/vote/: mod.rs  types.rs
(+2 files in other folders)
