[package]
name = "identity_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
common = { path = "../common" }
hex = "0.4.3"
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
ic_siwe = "0.1.1"
serde = { workspace = true, features = ["derive"] }
