[package]
name = "registry_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-dummy-getrandom-for-wasm = { workspace = true }
ic-stable-structures = { workspace = true }
ic-vetkeys = { workspace = true }
serde = { workspace = true }
